[package]
name = "rpo-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
chrono = "0.4.38"
num-traits = "0.2.19"
kamadak-exif = "0.6.1"
rayon = "1.10.0"
